cmake_minimum_required(VERSION 2.8)
include_directories(${PROJECT_SOURCE_DIR})
include_directories(${PROJECT_SOURCE_DIR}/judge_worker)
set(SRC_LIST judgeworker.cc)
set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11")
add_library(judge_worker ${SRC_LIST})
target_link_libraries(judge_worker zmqmsg zmq jsoncpp judger)
